--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "moment": "^2.29.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "express": "^4.17.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.0",
